src/pages/settings/addressbook/addressbook.scss
page-addressbook {
  .zero-state {
    height: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    text-align: center;

    &-icon {
      display: inline-block;
      width: 50px;
      height: 50px;
      border-radius: 50%;
      padding: 13px;
      box-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
      background-color: #fff;

      img {
        height: 100%;
        width: 100%;
      }
    }

    &-heading {
      font-size: 20px;
      margin: 1rem;
    }

    &-description {
      font-size: 0.9em;
      margin-top: 0;
      margin-left: 2rem;
      margin-right: 2rem;
      margin-bottom: 120px;
      opacity: 0.6;
      max-width: 300px;
    }
  }

  .contact {
    ion-label {
      display: flex;
      align-items: center;

      gravatar {
        margin-right: 1.5rem;
      }
    }

    .contact-info {
      overflow: hidden;

      .item-title {
        text-overflow: ellipsis;
        overflow: hidden;
      }
    }
  }

  .toolbar-background-md {
    background: transparent;
  }
}

/*
  app header toolbar common style 
  start
*/
ion-header {
  // background: linear-gradient(225deg, #f6f9fa 0%, #e6ebee 100%);
  background: transparent;
  height: 64px;
  padding: 20px 16px 0 16px;
  .toolbar ion-title {
    margin-left: 34px;
    padding: 0;
  }
  .toolbar-title {
    text-align: left;
    color: #142a3f;
    height: 24px;
    font-size: 1.7rem;
    font-weight: 500;
    line-height: 24px;
  }
  .toolbar.toolbar-md .title-md .toolbar-title-md {
    padding: 0;
    margin: 0;
  }
  .address-header-addOne {
    width: 24px;
    height: 24px;
    color: #626a71;
    font-size: 24px;
  }
  .toolbar-background {
    // background: linear-gradient(225deg, #f6f9fa 0%, #e6ebee 100%);
    background: transparent;
  }
  .back-button {
    color: #142a3f;
  }
  .toolbar.toolbar .back-button {
    padding: 0;
    line-height: 24px;
    width: 24px;
    height: 24px;
    min-height: 24px;
    margin: 0;
    min-width: auto;
  }
  ion-navbar.toolbar {
    padding: 0;
    margin: 0;
    background: transparent;
  }
  .toolbar.toolbar-md {
    min-height: auto;
  }
  .toolbar-ios {
    min-height: auto;
  }
}

/*
  app header toolbar common style 
  end
*/

.searchbar {
  padding: 0;
  margin: 0 16px 16px;
  width: auto;
  background: rgba(255, 255, 255, 1);
  box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.1);
  border-radius: 4px;
}
.searchbar-md .searchbar-search-icon,
.searchbar-md .searchbar-md-cancel {
  top: 14px;
}
.searchbar-ios .searchbar-search-icon {
  top: 12px;
}
.address-list {
  margin: 18px 16px 20px 16px;
  background: rgba(255, 255, 255, 1);

  button.contact {
    box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.1);
    border-radius: 4px;
    margin: 0 0 20px 0;
  }
}

